--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "serve": "http-server dist",
-    "build-serve": "npm run build && bom run serve"
+    "serve": "http-server dist --port 9000",
+    "build-serve": "npm run build && npm run serve"
   },
   "repository": {
     "type": "git",
