--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-catalogue",
+  "name": "movie-catalogue-lite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,39 +9,32 @@
     "serve": "http-server dist --port 9000",
     "build-serve": "npm run build && npm run serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fepfitra/movie-catalogue.git"
-  },
-  "author": "",
+  "keywords": [],
+  "author": "your_name <your_email@gmail.com>",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fepfitra/movie-catalogue/issues"
-  },
-  "homepage": "https://github.com/fepfitra/movie-catalogue#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.34.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
-    "workbox-precaching": "^6.5.4",
-    "workbox-webpack-plugin": "^6.5.4"
+    "workbox-precaching": "^6.5.3",
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "dependencies": {
-    "idb": "^7.1.1",
-    "regenerator-runtime": "^0.13.11",
-    "workbox-window": "^6.5.4"
+    "idb": "^7.0.1",
+    "regenerator-runtime": "^0.13.9",
+    "workbox-window": "^6.5.3"
   }
 }
