--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
-    "test": "karma start"
+    "test": "karma start ./karma.conf.js"
   },
   "keywords": [],
   "author": "your_name <your_email@gmail.com>",
