--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-sourcemap-loader": "0.3.8",
     "karma-webpack": "5.0.0",
     "puppeteer": "^19.7.2",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "3.3.1",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.0",
