--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,14 @@
         "sourceType": "module"
     },
     "rules": {
+      "no-underscore-dangle": "off",
+      "class-methods-use-this": "off",
+      "no-new": "off",
+      "no-restricted-globals": "off",
+      "no-console": "off",
+      "no-undef": "off",
+      "consistent-return": "off",
+      "no-prototype-builtins": "off",
+      "no-return-assign": "off"
     }
 }
