--- a/package.json
+++ b/package.json
@@ -4,48 +4,45 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-dev": "webpack serve --config webpack.dev.js",
+    "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
-    "test": "karma start ./karma.conf.js"
+    "test": "karma start ./karma.conf.js",
+    "lint": "eslint ./specs ./src"
   },
   "keywords": [],
   "author": "your_name <your_email@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.20.2",
-    "@babel/preset-env": "7.20.2",
-    "babel-loader": "9.1.0",
-    "codeceptjs": "^3.4.1",
-    "copy-webpack-plugin": "11.0.0",
-    "css-loader": "6.7.2",
-    "eslint": "8.28.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-codeceptjs": "1.3.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jasmine": "4.1.3",
-    "html-webpack-plugin": "5.5.0",
-    "http-server": "14.1.1",
-    "jasmine-ajax": "4.0.0",
-    "jasmine-core": "4.2.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "3.1.1",
-    "karma-eslint": "2.2.0",
-    "karma-firefox-launcher": "2.1.2",
-    "karma-jasmine": "4.0.2",
-    "karma-sourcemap-loader": "0.3.8",
-    "karma-webpack": "5.0.0",
-    "puppeteer": "^19.7.2",
-    "serviceworker-webpack-plugin": "^1.0.1",
-    "style-loader": "3.3.1",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.0",
-    "webpack-dev-server": "4.11.1",
-    "webpack-merge": "5.8.0",
-    "whatwg-fetch": "3.6.2"
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.0.2",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jasmine": "^4.1.1",
+    "html-webpack-plugin": "^4.3.0",
+    "jasmine-ajax": "^4.0.0",
+    "jasmine-core": "^3.5.0",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-eslint": "^2.2.0",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-jasmine": "^3.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^4.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.9",
+    "whatwg-fetch": "^3.2.0"
   },
   "dependencies": {
-    "idb": "7.0.1",
-    "regenerator-runtime": "0.13.9"
+    "idb": "^5.0.4",
+    "regenerator-runtime": "^0.13.5",
+    "serviceworker-webpack-plugin": "^1.0.1"
   }
 }
